style.css
/*modified code from w3schools*/
footer a:link{
    color:#ffdee4;
}
footer a:visited {
    color:#d9b18e;
}
body {
    background-color:#ffdee4
}
header {
    background-color: #544844;
    width: 100%;
    color:#ffbac0;
    text-align: center;
}
footer {
    background-color: #544844;
    color:#ffbac0;
    margin: 1rem auto;
    padding: 1rem;
    position: relative;
    text-align: center;
    width: 100%;
}
.container {
    position: relative;
    width: 50%;
  }
  .container2 {
    text-align:center;
  }
  .gif {
    display: block;
    height: auto;
    margin: auto;
  }
  
  .image {
    opacity: 1;
    display: block;
    width: 100%;
    height: auto;
    transition: .5s ease;
    backface-visibility: hidden;
  }
  
  .middle {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
  }
  
  .container:hover .image {
    opacity: 0.3;
  }
  
  .container:hover .middle {
    opacity: 1;
  }
  
  .text {
    background-color: #544844;
    border-radius: 25px;
    color: #ffbac0;
    font-family: "Merriweather", Courier, serif;
    font-size: 1rem;
    padding: 1rem 2rem;
  }
  nav ul{
    list-style-type: none;
  }
  main p{
    color:#544844;
    font-family:"Reddit Mono", Arial, monospace;
  }
  /*.smicon{
    block-size: 2rem;
    display: block;
    margin: auto;
    padding: 1rem;
    width: auto;
  }*/
  .smicon{
    display:inline-block;
    margin-top: 1rem;
    margin-bottom: 1rem;
    width: auto;
  }

.navmenu {
  background-color: #544844;
  font-family:"Merriweather", Courier, serif;
  overflow:hidden;
}
.navmenu a {
  float:right;
  font-size: 1rem;
  color:#ffbac0;
  text-align: center;
  padding: 1rem;
  text-decoration: none;
  font-weight:600;
}

